finish the documention
